--- a/idokep/manifest.json
+++ b/idokep/manifest.json
@@ -6,7 +6,7 @@
   "dependencies": [],
   "documentation": "https://github.com/rinyakok/homeassistant_idokep",
   "iot_class": "cloud_polling",
-  "issue_tracker": "",
+  "issue_tracker": "https://github.com/rinyakok/homeassistant_idokep/issues",
   "requirements": ["bs4>=0.0.2", "requests>2.0.0", "aiohttp>3.10.0"],
   "version": "1.0.0",
   "logo": "custom_components/idokep/idokep.svg"
